--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /Project_2_2/nbproject/private/
 /JavaApplication44/nbproject/private/
 /Project_2_3/nbproject/private/
+/Project_2_4/nbproject/private/
