--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /JavaApplication44/nbproject/private/
 /Project_2_3/nbproject/private/
 /Project_2_4/nbproject/private/
+/Project_2_5/nbproject/private/
