--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@
 /Project_2_3/nbproject/private/
 /Project_2_4/nbproject/private/
 /Project_2_5/nbproject/private/
+/Project_2_6/nbproject/private/
+/Project_2_7/nbproject/private/
