--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@
 /Project_2_5/nbproject/private/
 /Project_2_6/nbproject/private/
 /Project_2_7/nbproject/private/
+/Project_2_8/nbproject/private/
+/Project_2_9/nbproject/private/
