--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@
 /Project_2_7/nbproject/private/
 /Project_2_8/nbproject/private/
 /Project_2_9/nbproject/private/
+/Project_2_10/nbproject/private/
