--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,10 @@
 /Project_2_8/nbproject/private/
 /Project_2_9/nbproject/private/
 /Project_2_10/nbproject/private/
+/Project_2_11/nbproject/private/
+/Project_2_11/build/
+/Project_2_11_1/nbproject/private/
+/Project_2_11_1/build/
+/Project_2_11_1_1/nbproject/private/
+/Project_2_11/dist/
+/Project_2/dist/
